--- a/MusicEcSite/WebContent/header.html
+++ b/MusicEcSite/WebContent/header.html
@@ -11,6 +11,7 @@
 <link rel="Stylesheet"  href="css/EC.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+<link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
 <div class="openbtn"><span></span><span></span><span></span></div>
