--- a/MusicEcSite/WebContent/header.html
+++ b/MusicEcSite/WebContent/header.html
@@ -19,8 +19,8 @@
 <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
 <ul>
 <li class="menu">User Menu</li>
-<li><a href="jsp/TopCategory.jsp">Top</a></li> 
-<li><a href="jsp/cart.jsp">Cart</a></li> 
+<li><a href="jsp/user/UserTopCategory.jsp">Top</a></li> 
+<li><a href="jsp/user/UserCart.jsp">Cart</a></li> 
 <li><a href="">Logout</a></li>
 </ul>
 </div>
