--- a/MusicEcSite/WebContent/header.html
+++ b/MusicEcSite/WebContent/header.html
@@ -23,5 +23,10 @@
 <li><a href="jsp/user/UserCart.jsp">Cart</a></li> 
 <li><a href="">Logout</a></li>
 </ul>
+<header>
+<div class="container">
+<p>Sound Home</p>
+</div>
+</header>
 </div>
 </nav>
