--- a/MusicEcSite/WebContent/header.html
+++ b/MusicEcSite/WebContent/header.html
@@ -1,6 +1,8 @@
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta charset="UTF-8">
 <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -8,25 +10,33 @@
   crossorigin="anonymous">
 </script>
 <title>Sound Home</title>
-<link rel="Stylesheet"  href="css/EC.css">
+<link rel="Stylesheet"  href="../css/EC.css">
+<link rel="stylesheet" href="../css/login.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-<link rel="stylesheet" href="../css/login.css">
+
+
+
 </head>
 <body>
 <div class="openbtn"><span></span><span></span><span></span></div>
 <nav id="g-nav">
 <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
-<ul>
-<li class="menu">User Menu</li>
-<li><a href="jsp/user/UserTopCategory.jsp">Top</a></li> 
-<li><a href="jsp/user/UserCart.jsp">Cart</a></li> 
-<li><a href="">Logout</a></li>
-</ul>
+
+<c:if test="${!(empty sessionScope.login)}">
+
+	<ul>
+		<li class="menu">User Menu</li>
+		<li><a href="jsp/user/UserTopCategory.jsp">Top</a></li> 
+		<li><a href="jsp/user/UserCart.jsp">Cart</a></li> 
+		<li><a href="">Logout</a></li>
+	</ul>
+</c:if>
+</div>
+</nav>
 <header>
 <div class="container">
 <p>Sound Home</p>
 </div>
 </header>
-</div>
-</nav>
+
