--- a/MusicEcSite/WebContent/header.html
+++ b/MusicEcSite/WebContent/header.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="../css/login.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-
+<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
 
 
 </head>
@@ -36,7 +36,7 @@
 </nav>
 <header>
 <div class="container">
-<p>Sound Home</p>
+<p class="contain-text"></p>
 </div>
 </header>
 
