--- a/MusicEcSite/WebContent/header.html
+++ b/MusicEcSite/WebContent/header.html
@@ -17,8 +17,13 @@
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
 
 
+
+
 </head>
 <body>
+
+
+
 <div class="openbtn"><span></span><span></span><span></span></div>
 <nav id="g-nav">
 <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
@@ -34,8 +39,20 @@
 </c:if>
 </div>
 </nav>
+
+<div class = "header-inner">
+	<h1 class = "headerLogo">
+		<a class = "logo">
+			<img src = "../AdminImage/logo.png" alt = "SoundHome">
+		</a>
+	</h1>
+</div>
+
 <header>
+
+
 <div class="container">
+
 
 </div>
 
